# workbloom

./: .env  .gitignore  .workbloom  .workbloom-setup.sh  .workbloom.example  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  sonar-project.properties
.claude/: vup.md
.github/workflows/: auto-release.yml  build.yml  claude-code-review.yml  claude.yml  release.yml  version-bump.yml
scripts/: README.md  claude-comment-manager.js  package.json
src/: config.rs  file_ops.rs  git.rs  lib.rs  main.rs  multiplexer.rs  output.rs  port.rs  tmux.rs
src/commands/: cleanup.rs  mod.rs  setup.rs
tests/: integration.rs
