[package]
name = "workbloom"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A Git worktree management tool"
license = "MIT"
repository = "https://github.com/yourusername/workbloom"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"
colored = "2.1"
indicatif = "0.17"
shellexpand = "3.1"
which = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
