[package]
name = "workbloom"
version = "0.1.0"
edition = "2021"
authors = ["chaspy <chaspy+git@gmail.com>"]
description = "A Git worktree management tool with automatic file copying and port allocation"
license = "MIT"
repository = "https://github.com/chaspy/workbloom"
homepage = "https://github.com/chaspy/workbloom"
documentation = "https://github.com/chaspy/workbloom"
keywords = ["git", "worktree", "cli", "development", "workflow"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
exclude = ["worktree-*"]

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"
colored = "3.0"
indicatif = "0.17"
shellexpand = "3.1"
which = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
